macOS: attributedSubstringFromRange in GHOST_WindowViewCocoa.h leaks memory. #86222

Closed
opened 2021-03-03 03:20:40 +01:00 by Corbin Dunn · 5 comments

System Information
Operating system: macOS (all versions)
Graphics card: n/a

Blender Version
All versions

Short description of error

attributedSubstringFromRange in GHOST_WindowViewCocoa.h leaks memory. It returns a retained object which should be autoreleased. This may not be important as the code is probably not called, but it should be fixed in case it ever is called.

Fix is at: https://developer.blender.org/D10597

I'm new to Blender development, but I have 13 years of experience working on AppKit at Apple. Please let me know if this isn't the appropriate place for this report.

**System Information** Operating system: macOS (all versions) Graphics card: n/a **Blender Version** All versions **Short description of error** attributedSubstringFromRange in GHOST_WindowViewCocoa.h leaks memory. It returns a retained object which should be autoreleased. This may not be important as the code is probably not called, but it should be fixed in case it ever is called. Fix is at: https://developer.blender.org/D10597 I'm new to Blender development, but I have 13 years of experience working on AppKit at Apple. Please let me know if this isn't the appropriate place for this report.
Author

Added subscriber: @corbindunn

Added subscriber: @corbindunn

This issue was referenced by 87c949a3bd

This issue was referenced by 87c949a3bddce445e56337efc6764e29dcfab36c
Member

Added subscriber: @ankitm

Added subscriber: @ankitm
Member

Changed status from 'Needs Triage' to: 'Resolved'

Changed status from 'Needs Triage' to: 'Resolved'
Ankit Meel self-assigned this 2021-03-03 17:02:34 +01:00
Member

Shouldn't have removed the magic spell from commit message..
87c949a3bd

Shouldn't have removed the magic spell from commit message.. 87c949a3bd
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#86222
No description provided.